filebrowser/filebrowser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: production
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: files
              mountPath: /files
            - name: state
              mountPath: /state
            - name: config
              mountPath: /.filebrowser.json
              subPath: filebrowser.json
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: home-pvc
        - name: state
          persistentVolumeClaim:
            claimName: filebrowser-pvc
        - name: config
          configMap:
            name: filebrowser-config
            items:
              - key: filebrowser.json
                path: filebrowser.json
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: production
  labels:
    app: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`files.staging.imranr.dev`)
      kind: Rule
      services:
        - name: filebrowser
          port: 3000
  tls:
    secretName: imranr-dev-tls
